# SageFlow-Modern

./: .env.local  .env.local.example  .gitignore  App.tsx  CLAUDE.md  COMPLETE-REVIEW.md  DEVELOPMENT-REVIEW.md  DRIZZLE_APPLIED.md  ETHIOPIAN-WINDOWS-STRATEGY.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MIGRATION_SUMMARY.md  PEACHTREE-COMPATIBILITY.md  PEACHTREE-INTEGRATION-ANALYSIS.md  PEACHTREE_INTEGRATION.md  PEACHTREE_QUICK_START.md  PROJECT_SETUP.md  PTB-COMPLETE-THIS-WEEK.md  PTB_IMPORT_EXPORT_GUIDE.md  QUICK-REFERENCE.md  README-DOCS.md  README.md  README_MIGRATION.md  SCAFFOLDING_SUMMARY.md  SETUP_NO_DOCKER.md  TAURI_DESKTOP.md  TWO-VERSIONS-ANALYSIS.md  WINDOWS_INSTALL_GUIDE.md  analyze-chartar-binary.js  analyze-chartar-deep.js  analyze-chartar.js  analyze-ptb-structure.js  apply-balances.sh  apply-rls.ts  debug-credential-guess.ts  drizzle.config.ts  electron-builder.yml  extract-ptb.sh  fix-invoice-status.ts  fix-relationships.ts  (+38 more)
components/: AICopilot.tsx  Dashboard.tsx  ExpensesView.tsx  InventoryView.tsx  SalesView.tsx  Sidebar.tsx
drizzle/: 0000_slimy_tinkerer.sql  0001_wild_misty_knight.sql  0002_lazy_skin.sql  0003_outgoing_wallow.sql  0004_customer_peachtree_fields.sql  0005_vendor_peachtree_fields.sql  0006_items_peachtree_fields.sql  0007_invoices_peachtree_fields.sql  0008_employees_peachtree_fields.sql  add_banking_tables.sql  add_employees_table.sql  add_journal_tables.sql
electron/: README.md  main.js  preload.js  ptb-service-complete.js  serve.js  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+411 files in other folders)
