[package]
name = "sageflow"
version = "0.1.0"
description = "SageFlow Accounting - Modern accounting software for Ethiopian businesses"
authors = ["SageFlow <support@sageflow.app>"]
license = "MIT"
repository = "https://github.com/Yosef-Ali/SageFlow-Modern"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "window-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
